plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

ext {
    javaVersion         = JavaVersion.VERSION_21
    springBootVersion   = '3.5.13'
    testcontainersVersion = '1.19.8'
}

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    compileJava {
        options.release = 21
        options.compilerArgs << '--enable-preview'
    }
    compileTestJava {
        options.release = 21
        options.compilerArgs << '--enable-preview'
    }
    test {
        jvmArgs '--enable-preview'
        useJUnitPlatform()
        testLogging {
            events 'passed', 'skipped', 'failed'
        }
    }

    dependencies {
    }

}
// Note: repositories are declared in settings.gradle via dependencyResolutionManagement
